--- a/aesportal/css/a-z-students.css
+++ b/aesportal/css/a-z-students.css
@@ -3,6 +3,13 @@ body {
     background-color: gray;
 }
 
+.body {
+    box-shadow: 0px 2px 10px 2px;
+    position: relative;
+    margin: auto;
+    width: 1300px;
+}
+
 .navbar {
     position: relative;
     margin: auto;
@@ -169,20 +176,24 @@ body {
 }
 
 #addrecord {
-    position: absolute;
-    right: 118px;
+    position: relative;
+    margin: auto;
+    top: 20px;
+    width: 50px;
     font-size: 13px;
     font-family: Arial;
-    background-color: #f9f9f9;
-    padding: 15px 68px;
+    background-color: maroon;
+    padding: 15px 40px;
+    text-align: center;
 }
 
 #addrecord:hover {
-    background-color: #ddd;
+    background-color: firebrick;
 }
 
-#addrecord a{
+.new{
     text-decoration: none;
+    color: white
 }
 
 /*Footer*/
