--- a/aesportal/css/aes-admin.css
+++ b/aesportal/css/aes-admin.css
@@ -76,6 +76,7 @@ body {
     background-color: #f9f9f9;
     box-shadow: 0px 1px 1px 0px gray;
     width: 150px;
+    
     z-index: 1;
 }
 
@@ -96,6 +97,36 @@ body {
     display: block;
 }
 
+/*Search*/
+.search {
+    position: absolute;
+    right: 6px;
+    overflow: hidden;
+}
+
+.search_bar {
+	position: relative;
+	top: -1px;
+    right: 0px
+	width: 255px;
+	height: 20px;
+	border: solid 1px maroon;
+	text-indent: 5px;
+	font-style: italic;
+	border-radius: 8px;
+}
+
+.search_button {
+	position: relative;
+	top: 7px;
+	right: 0px;
+	width: 23px;
+	height: 23px;
+    border: solid 1px maroon;
+	border-radius: 6px;
+}
+
+
 /*Content*/
 #content {
 	position: relative;
@@ -108,29 +139,6 @@ body {
 	margin: auto;
 	width: 1300px;
 	background-color: white;
-}
-
-.welcome_msg {
-    position: relative;
-    margin: auto;
-    width: 750px;
-    font-family: Arial;
-    padding-bottom: 20px;
-    padding-top: 20px;
-}
-
-.welcome_title {
-    position: relative;
-    margin: auto;
-    width: 400px;
-    font-size: 50px;
-    text-align: center;
-    padding-bottom: 20px;
-}
-
-.welcome_intro {
-    text-align: justify;
-    font-size: 20px;
 }
 
 /*Footer*/
