--- a/aesportal/css/new-students.css
+++ b/aesportal/css/new-students.css
@@ -193,7 +193,7 @@ body {
     top: 0px;
 }
 
-.signup_button {
+.add_button {
     position: relative;
     width: 100%;
     right: 0px;
@@ -202,6 +202,22 @@ body {
     color: white;
     padding: 15px;
     border: solid 1px maroon;
+}
+
+.cancel_con {
+    position: relative;
+    width: auto;
+    top: 10px;
+    background-color: maroon;
+    color: white;
+    padding: 14px;
+    border: solid 1px maroon;
+}
+
+.cancel_button {
+    text-decoration: none;
+    font-size: 13px;
+    text-align: center;
 }
 
 .signup_con input[type=text], input[type=password] {
